Revert "change privacy policy link; closes openrightsgroup/cmp-issues#250"
This reverts commit 607aef671dbb0e30a9ba98f92318ec2c7ffe5aec.

--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -120,5 +120,5 @@ piwikTracker.enableLinkTracking();
             <a class="" href="/support">Get involved</a>
             <a class="" href="https://www.openrightsgroup.org/donate/">Donate</a>
             <a class="" href="https://www.openrightsgroup.org/contact/">Contact</a>
-            <a class="" href="/how-blocked-uses-data">Privacy Policy</a>
+            <a class="" href="https://www.openrightsgroup.org/privacy/">Privacy Policy</a>
 {% endmacro %}
