--- a/BlockedFrontend/templates/chunks.part.html
+++ b/BlockedFrontend/templates/chunks.part.html
@@ -95,19 +95,25 @@
 {% endmacro %}
 
 {% macro piwik() %}
-    <!-- piwik -->
+<!-- Matomo -->
 {% if config.PIWIK %}
-<script type="text/javascript"> var pkBaseURL = (("https:" == document.location.protocol) ? "https://bug.openrightsgroup.org/piwik/" : "https://bug.openrightsgroup.org/piwik/"); document.write(unescape("%3Cscript src='" + pkBaseURL + "piwik.js' type='text/javascript'%3E%3C/script%3E")); </script><script type="text/javascript">
 
-try {
-var piwikTracker = Piwik.getTracker(pkBaseURL + "piwik.php", 14);
-piwikTracker.disableCookies();
-piwikTracker.trackPageView();
-piwikTracker.enableLinkTracking();
-} catch( err ) {}
+<script type="text/javascript">
+  var _paq = window._paq || [];
+  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+  _paq.push(['trackPageView']);
+  _paq.push(['enableLinkTracking']);
+  (function() {
+    var u="https://bug.openrightsgroup.org/piwik/";
+    _paq.push(['setTrackerUrl', u+'matomo.php']);
+    _paq.push(['setSiteId', '14']);
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+  })();
 </script>
+
 {% endif %}
-    <!-- end piwik -->
+<!-- End Matomo Code -->    
 {% endmacro %}
 
 {% macro footer_menu() %}
