--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -230,9 +230,10 @@ Your feedback was successfully submitted.
 {% if url.lower().startswith('https:') and alt_url_data %}
 <div class="info-panel">
     <span class="glyphicon glyphicon-info-sign" style="margin-left: -1.75em; float: left; font-size: 1.5em"></span>
-<p>Parental control filter systems can have difficulty providing human readable responses for HTTPS requests, due to certificate errors.  </p>
-
-<p><a href="{{ url_for('.site', url=alt_url_data.url) }}" rel="nofollow">View the non-HTTPS results</a> for this site.</p>
+    <p>
+        We can't get reliable results for web addresses starting with <span>https://</span>.
+        <a href="{{ url_for('.site', url=alt_url_data.url) }}" rel="nofollow">See accurate results for the <span>http://</span> version of this address</a> instead.
+    </p>
 </div>
 {% endif %}
 
