add more info link in https warning box; openrightsgroup/blocked-org-uk#396

--- a/BlockedFrontend/templates/site/site.html
+++ b/BlockedFrontend/templates/site/site.html
@@ -234,7 +234,8 @@ Your feedback was successfully submitted.
     <span class="glyphicon glyphicon-info-sign" style="margin-left: -1.75em; float: left; font-size: 1.5em"></span>
     <p>
         We can't get reliable results for web addresses starting with <strong>https://</strong>.<br />
-        <a href="{{ url_for('.site', url=alt_url_data.url) }}" rel="nofollow">See accurate results for the <strong>http://</strong> version of this address</a> instead.
+        <a href="{{ url_for('.site', url=alt_url_data.url) }}" rel="nofollow">See accurate results for the <strong>http://</strong> version of this address</a> instead.<br />
+        <small><a href="/faqs#https">More info</a></small>
     </p>
 </div>
 {% endif %}
