add more info link in https warning box; openrightsgroup/blocked-org-uk#396

--- a/BlockedFrontend/static/theme.css
+++ b/BlockedFrontend/static/theme.css
@@ -198,6 +198,10 @@ padding-top: 4.0em;
     font-size: 1.5em;
 }
 
+.info-panel small {
+    color: #ddd;
+}
+
 #active * td {
     background-color: #ffeded;
 }
