show probe uuid for admins

--- a/BlockedFrontend/templates/blocked-uk/stats/probes.html
+++ b/BlockedFrontend/templates/blocked-uk/stats/probes.html
@@ -41,6 +41,9 @@
     {% else %}
     {{ d.name }}
     {% endif %}
+    {% if g.admin %}
+    <div>{{ d.uuid }}</div>
+    {% endif %}
 
   </td>
   <td>
